Wed May 25 20:06:27 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk.rb: TkComm#tk_split_*list fail to split a kind of SJIS
	  strings. To avoid the trouble, add arguments to control converting
	  encoding, and do split on a UTF8 string. 

	* ext/tk/lib/multi-tk.rb: modify to attend encoding.

	* ext/tk/lib/remote-tk.rb: ditto.

	* ext/tk/lib/tk/itemconfig.rb: ditto.

	* ext/tk/lib/tk/listbox.rb: ditto.

	* ext/tk/lib/tk/namespace.rb: ditto.

	* ext/tk/lib/tk/panedwindow.rb: ditto.

	* ext/tk/lib/tk/text.rb: ditto.

	* ext/tk/lib/tk/textmark.rb: ditto.

	* ext/tk/lib/tk/texttag.rb: ditto.

	* ext/tk/lib/tk/variable.rb: ditto.

	* ext/tk/lib/tk/winfo.rb: ditto.

	* ext/tk/lib/tkextlib/iwidgets/scrolledlistbox.rb: ditto.

	* ext/tk/lib/tkextlib/iwidgets/scrolledtext.rb: ditto.

	* ext/tk/lib/tk.rb: add TkWindow#lower_window/raise_window and
	  Tk#lower_window/raise_window by reason of method-name conflict

	* ext/tk/lib/tk/canvas.rb: bug fix on TkCanvas#delete when given
	  non-TkcItem arguments. 

	* ext/tk/lib/tkextlib/iwidgets/scrolledcanvas.rb: ditto.

Wed May 25 19:48:12 2005  Minero Aoki  <aamine@loveruby.net>

	* lib/fileutils.rb (rm_r): does chown(2). [ruby-dev:26199]

Wed May 25 12:59:48 2005  Tanaka Akira  <akr@m17n.org>

	* lib/open-uri.rb (OpenURI::Meta::RE_QUOTED_STRING): a content of 
	  quoted-string should be zero or more characters.

Tue May 24 23:42:16 2005  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* numeric.c (fix_pow): support Fixnum ** Float case directly
	  without coercing.  [ruby-talk:142697] [ruby-talk:143054]

Tue May 24 16:57:24 2005  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ruby.c (require_libraries): caused SEGV when continuation jumped
	  in to the required library code.

Tue May 24 17:45:59 2005  Shugo Maeda  <shugo@ruby-lang.org>

	* test/readline/test_readline.rb: do not test libedit.
	  fixed: [ruby-dev:26217]

Tue May 24 06:45:31 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>
