@@ -1,3 +1,7 @@
+Thu May 26 06:08:11 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>
+
+	* ext/tk/lib/tk.rb: add shortcut-methods of tk_call + tk_split_list
+
 Wed May 25 20:06:27 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>
 
 	* ext/tk/lib/tk.rb: TkComm#tk_split_*list fail to split a kind of SJIS
